# Maquina-Expendedora

./: .gitignore  CMakeLists.txt
Includes/descipcion_maquina/: maquina.h
Includes/descripcion_maquina/: maquina.h  visualizar_productos_consola.h
Includes/interfaces/: IMetodo_pago.h  IVisualizador.h
Includes/productos/: producto.h
Includes/usuario/: cliente.h  cliente_pago.h  cliente_productos.h
Includes/venta_compra/: compra.h
src/descripcion_maquina/: maquina.cpp  visualizar_productos_consola.cpp
src/productos/: producto.cpp
src/usuario/: cliente.cpp  cliente_pago.cpp  cliente_productos.cpp
src/venta_compra/: compra.cpp
